For publish config

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 # Ignore Gradle GUI config
 gradle-app.setting
 
+gradle.properties
+local.properties
+*.gpg
+
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
