--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ local.properties
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
+.dokka
+.dokka/**
+
 .idea/
 .idea/*
 /.idea/
