--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # setup Java
-      - name: Setup java8
+      - name: Setup java
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
