--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,6 +4,30 @@ on:
     tags:
       - v3.**.**
 jobs:
+  run-test:
+    name: Run Test
+    runs-on: ubuntu-latest
+    steps:
+      # 检出仓库代码
+      - name: Check Out Repo
+        uses: actions/checkout@v2
+
+      # setup Java
+      - name: Setup Java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: 8
+
+      # setup Gradle
+      - name: Gradle Run Test
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.4
+          arguments: clean build test
+
+
+
   publish-release:
     name: Publish Release
     runs-on: ubuntu-latest
@@ -50,7 +74,35 @@ jobs:
           body_path: .changelog/${{ github.ref_name }}.md
           generate_release_notes: true
           prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') }}
-          draft: true
+          # draft: true
 
 
+  publish-snapshot:
+    name: Publish snapshot
+    runs-on: ubuntu-latest
+    needs: publish-release
+    steps:
+      # 检出仓库代码
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      # setup Java
+      - name: Setup java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: 8
+
+      # the gpg
+      - name: Decode gpg file
+        run: |
+          echo "${{ secrets.GPG_B64 }}" > ForteScarlet.gpg.b64
+          base64 -d ForteScarlet.gpg.b64 > ForteScarlet.gpg
+
+      # setup Gradle
+      - name: Gradle publish snapshot
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.4
+          arguments: clean test publishToSonatype closeAndReleaseStagingRepository -DsnapshotOnly -DisSnapshot=true -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
 
