--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -31,6 +31,7 @@ jobs:
   publish-release:
     name: Publish Release
     runs-on: ubuntu-latest
+    needs: run-test
     steps:
       # 检出仓库代码
       - name: Check Out Repo
