--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - dev-snapshot**
     paths:
       - '**src/main/kotlin/**.kt'
       - '**src/main/java/**.java'
