--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -3,6 +3,16 @@ on:
   push:
     tags:
       - v3.**.**
+
+env:
+  GPG_KEY_ID: ${{ secrets.SECRET_KEY_ID }}
+  GPG_SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  GPG_PASSWORD: ${{ secrets.SECRET_PASS }}
+  OSSRH_USER: ${{ secrets.OSS_USERNAME }}
+  OSSRH_PASSWORD: ${{ secrets.OSS_PASSWORD }}
+  GRADLE_OPTS: "-Xmx4G -Xms4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8"
+
+
 jobs:
   run-test:
     name: Run Test
@@ -23,9 +33,8 @@ jobs:
       - name: Gradle Run Test
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4
+          gradle-version: 7.4.2
           arguments: clean build test
-
 
 
   publish-release:
@@ -44,18 +53,15 @@ jobs:
           distribution: 'temurin'
           java-version: 8
 
-      # the gpg
-      - name: Decode Gpg File
-        run: |
-          echo "${{ secrets.GPG_B64 }}" > ForteScarlet.gpg.b64
-          base64 -d ForteScarlet.gpg.b64 > ForteScarlet.gpg
-
       # setup Gradle
       - name: Gradle Publish Release
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4
-          arguments: clean build test publishToSonatype closeAndReleaseStagingRepository -DreleaseOnly -DisSnapshot=false -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
+          gradle-version: 7.4.2
+          arguments: clean build publishToSonatype closeAndReleaseStagingRepository --warning-mode all --info -Porg.gradle.jvmargs="org.gradle.jvmargs=-Xmx4G -Xms4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8"
+        env:
+          SIMBOT_IS_SNAPSHOT: false
+          SIMBOT_RELEASES_ONLY: true
 
   create-release:
     name: Create release
@@ -94,16 +100,12 @@ jobs:
           distribution: 'temurin'
           java-version: 8
 
-      # the gpg
-      - name: Decode gpg file
-        run: |
-          echo "${{ secrets.GPG_B64 }}" > ForteScarlet.gpg.b64
-          base64 -d ForteScarlet.gpg.b64 > ForteScarlet.gpg
-
       # setup Gradle
       - name: Gradle publish snapshot
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4
-          arguments: clean test publishToSonatype closeAndReleaseStagingRepository -DsnapshotOnly -DisSnapshot=true -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
-
+          gradle-version: 7.4.2
+          arguments: clean publishToSonatype closeAndReleaseStagingRepository
+        env:
+          SIMBOT_IS_SNAPSHOT: true
+          SIMBOT_SNAPSHOT_ONLY: true
