--- a/.github/release.yml
+++ b/.github/release.yml
@@ -7,6 +7,9 @@ changelog:
     - title: '🔧 Bug Fix'
       labels:
         - 'bug'
+    - title: '⚙️ 修补缺陷'
+      labels:
+        - '缺陷'
     - title: '🎉 新特性'
       labels:
         - '特性'
