build: 调整项目配置

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -5,12 +5,15 @@ on:
       - v3.**.**
 
 env:
-  GPG_KEY_ID: ${{ secrets.SECRET_KEY_ID }}
-  GPG_SECRET_KEY: ${{ secrets.SECRET_KEY }}
-  GPG_PASSWORD: ${{ secrets.SECRET_PASS }}
-  OSSRH_USER: ${{ secrets.OSS_USERNAME }}
-  OSSRH_PASSWORD: ${{ secrets.OSS_PASSWORD }}
-  GRADLE_OPTS: "-Xmx4G -Xms4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8"
+  IS_CI: true
+  GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
+  GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
+  GPG_PASSWORD: ${{ secrets.GPG_PASSWORD }}
+  OSSRH_USER: ${{ secrets.SONATYPE_USERNAME }}
+  OSSRH_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+  SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+  SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+  GRADLE_OPTS: "-Xmx8g -Xms2g -Dfile.encoding=UTF-8"
 
 
 jobs:
@@ -58,7 +61,16 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.5.1
-          arguments: clean build publishToSonatype closeAndReleaseStagingRepository --warning-mode all --info -Porg.gradle.jvmargs="org.gradle.jvmargs=-Xmx4G -Xms4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8"
+          arguments: |
+            publishToSonatype
+            closeAndReleaseStagingRepository
+            --warning-mode all
+            --info
+            -Pkotlin.daemon.jvmargs="-Xmx8g -XX:MaxPermSize=1g -Dfile.encoding=UTF-8"
+            -Porg.gradle.jvmargs="-Xmx8g -XX:MaxPermSize=1g -Dfile.encoding=UTF-8"
+            -Porg.gradle.workers.max=8
+            -Porg.gradle.parallel=true
+
         env:
           SIMBOT_IS_SNAPSHOT: false
           SIMBOT_RELEASES_ONLY: true
@@ -105,7 +117,47 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.5.1
-          arguments: clean publishToSonatype closeAndReleaseStagingRepository
+          arguments: publishToSonatype closeAndReleaseStagingRepository
         env:
           SIMBOT_IS_SNAPSHOT: true
           SIMBOT_SNAPSHOT_ONLY: true
+
+  deploy-doc:
+    name: Deploy-doc
+    runs-on: ubuntu-latest
+    needs: publish-release
+    steps:
+      # 检出仓库代码
+      - name: Check out repo
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+      # setup Java
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: 11
+
+      - name: Create gradle.properties
+        run: |
+          echo "org.gradle.workers.max=16" > gradle.properties
+          echo "org.gradle.parallel=true" >> gradle.properties
+          echo "org.gradle.jvmargs=-Xmx8G -Xms4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8" >> gradle.properties
+
+      # setup Gradle
+      - name: Gradle generate documentation
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.5.1
+          arguments: dokkaHtmlMultiModuleAndPost -DisSnapshot=false
+
+      - name: Push to doc repository
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PUSH_TOKEN }}
+          external_repository: simple-robot-library/simbot3-component-tencent-guild-apiDoc
+          publish_branch: gh-pages  # default: gh-pages
+          publish_dir: ./dokka/html
+          # full_commit_message: Publish ${{ github.ref_name }} documentation
