--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -7,6 +7,7 @@ on:
       - v*.**.**.**
     paths:
       - '**src/main/kotlin/**.kt'
+      - 'buildSrc/**'
       - '**src/main/java/**.java'
 
 env:
