--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
 
       # setup Gradle
@@ -52,7 +52,7 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
 
       # setup Gradle
@@ -107,7 +107,7 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
 
       # setup Gradle
@@ -135,27 +135,30 @@ jobs:
       - name: Setup java
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
-
-      - name: Create gradle.properties
-        run: |
-          echo "org.gradle.workers.max=16" > gradle.properties
-          echo "org.gradle.parallel=true" >> gradle.properties
-          echo "org.gradle.jvmargs=-Xmx8G -Xms4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8" >> gradle.properties
 
       # setup Gradle
       - name: Gradle generate documentation
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.6
-          arguments: dokkaHtmlMultiModule -DisSnapshot=false
+          arguments: |
+            -Porg.gradle.jvmargs="-Xmx4g -Xms4g -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8" 
+            -Porg.gradle.daemon=false
+            -DisSnapshot=false
+            --info 
+            --warning-mode all
+            -x test
+            --build-cache
+            dokkaHtmlMultiModule
 
       - name: Push to doc repository
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PUSH_TOKEN }}
-          external_repository: simple-robot-library/simbot3-component-tencent-guild-apiDoc
-          publish_branch: gh-pages  # default: gh-pages
+          external_repository: simple-robot-library/simbot3-api-docs
+          publish_branch: gh-pages
           publish_dir: ./build/dokka/html
-          # full_commit_message: Publish ${{ github.ref_name }} documentation
+          # deploy to sub dir
+          destination_dir: components/tencent-guild
