pref: kdoc deploy

--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           personal_token: ${{ secrets.PUSH_TOKEN }}
           external_repository: simple-robot-library/simbot3-api-docs
-          publish_branch: gh-pages
+          publish_branch: kdoc-deploy/component-tencent-guild
           publish_dir: ./build/dokka/html
           # deploy to sub dir
           destination_dir: components/tencent-guild
