--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-kotlinx-coroutines = "1.6.2"
-kotlinx-serialization = "1.3.3"
-ktor = "2.1.2"
+kotlinx-coroutines = "1.6.4"
+kotlinx-serialization = "1.5.0-RC"
+ktor = "2.2.3"
 openjdk-jmh = "1.35"
 log4j = "2.14.1"
 
