--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,8 +47,16 @@ ktor-client-ws = { group = "io.ktor", name = "ktor-client-websockets", version.r
 ktor-client-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
 ktor-client-cio = { group = "io.ktor", name = "ktor-client-cio", version.ref = "ktor" }
 ktor-client-js = { group = "io.ktor", name = "ktor-client-js", version.ref = "ktor" }
+
+# for linuxX64, macosX64, macosArm64, mingwX64
+# see https://ktor.io/docs/http-client-engines.html#curl
 ktor-client-curl = { group = "io.ktor", name = "ktor-client-curl", version.ref = "ktor" }
+# for mingw
+# see https://ktor.io/docs/http-client-engines.html#winhttp
 ktor-client-winhttp = { group = "io.ktor", name = "ktor-client-winhttp", version.ref = "ktor" }
+# Darwin-based operating systems (such as macOS, iOS, tvOS, and so on)
+# see https://ktor.io/docs/http-client-engines.html#darwin
+ktor-client-darwin = { group = "io.ktor", name = "ktor-client-darwin", version.ref = "ktor" }
 
 # nodejs
 #kotlinx-nodejs = ""
