--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
 kotlin.code.style=official
+kotlin.js.generate.executable.default=false
+kotlin.mpp.stability.nowarn=true
+kotlin.native.ignoreDisabledTargets=true
 org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
