--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,7 +21,7 @@ jobs:
     name: Run test and publish
     strategy:
       matrix:
-        os: [ macos-latest, windows-latest, ubuntu-latest ]
+        os: [ macos-latest, windows-latest ] # , ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
       # 检出仓库代码
@@ -60,40 +60,6 @@ jobs:
         env:
           SIMBOT_IS_SNAPSHOT: false
           SIMBOT_RELEASES_ONLY: true
-
-#  publish-release:
-#    name: Publish Release
-#    strategy:
-#      matrix:
-#        os: [ macos-latest, windows-latest, ubuntu-latest ]
-#    runs-on: ${{ matrix.os }}
-#    needs: run-test
-#    steps:
-#      # 检出仓库代码
-#      - name: Check Out Repo
-#        uses: actions/checkout@v3
-#
-#      # setup Java
-#      - name: Setup Java
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'zulu'
-#          java-version: 11
-#
-#      # setup Gradle
-#      - name: Gradle Publish Release
-#        uses: gradle/gradle-build-action@v2
-#        with:
-#          gradle-version: 7.6
-#          arguments: |
-#            publishToSonatype
-#            closeAndReleaseStagingRepository
-#            --warning-mode all
-#            --info
-#            -Porg.gradle.jvmargs="-XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
-#        env:
-#          SIMBOT_IS_SNAPSHOT: false
-#          SIMBOT_RELEASES_ONLY: true
 
   create-release:
     name: Create release
