--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,8 @@ kotlin.js.generate.executable.default=false
 kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+
+# for JVM IR transformation
+#kotlinx.atomicfu.enableJvmIrTransformation=true
+# for JS IR transformation
+#kotlinx.atomicfu.enableJsIrTransformation=true
