--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches:
       - main
-      - dev-snapshot**
-      - v*.**.**.**
-      - dev/pref/**
+      - dev/ver/**
+      - dev/main
+
     paths:
       - '**src/main/kotlin/**.kt'
       - 'buildSrc/**'
