--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
 #      - main
-      - dev/ver/v**
+      - dev/ver/**
+      - dev/main
+
     paths:
       - 'website/**'
 
