ci: 调整配置文件

--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -33,4 +33,6 @@ jobs:
             allTests
             --info 
             --warning-mode all
-
+            --build-cache
+            -Porg.gradle.jvmargs="-XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8"
+            -Porg.gradle.daemon=false
