feat(api): support CreateScheduleApi

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 
+org.gradle.daemon=false
