--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlinx-coroutines = "1.6.4"
-kotlinx-serialization = "1.5.0-RC"
+kotlinx-serialization = "1.5.0"
 kotlinx-datetime = "0.4.0"
 okio = "3.3.0"
 ktor = "2.2.3"
