--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,4 @@ kotlin.native.ignoreDisabledTargets=true
 org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 
 org.gradle.daemon=false
+org.gradle.parallel=false
