build: gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@ kotlin.code.style=official
 kotlin.js.generate.executable.default=false
 kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
-org.gradle.jvmargs=-Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Dfile.encoding=UTF-8
+# -Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g
 
 org.gradle.daemon=false
 org.gradle.parallel=false
