build(deps): 更新 simbot 到 v3.1.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ org.gradle.workers.max=4
 #org.gradle.daemon=false
 #org.gradle.parallel=false
 
+# Hide: A compileOnly dependency is used in the Kotlin/Native target 'xxx'
+# Such dependencies are not applicable for Kotlin/Native, consider changing the dependency type to 'implementation' or 'api'.
+kotlin.native.ignoreIncorrectDependencies=true
