--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -1,7 +1,12 @@
 name: Test Branch
 on:
   pull_request:
-    branches: dev/**
+    branches:
+      - dev/**
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 env:
   IS_CI: true
