--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,29 @@
+
 kotlin.code.style=official
+
 kotlin.js.generate.executable.default=false
 kotlin.mpp.stability.nowarn=true
+# w: The following Kotlin/Native targets cannot be built on this machine and are disabled
+# To hide this message, add 'kotlin.native.ignoreDisabledTargets=true' to the Gradle properties.
 kotlin.native.ignoreDisabledTargets=true
-org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
-# -Xmx8g -Xms2g -XX:MaxMetaspaceSize=1g
 
-# https://kotlinlang.org/docs/native-improving-compilation-time.html
-
-org.gradle.caching=true
-org.gradle.workers.max=4
-#org.gradle.daemon=false
-#org.gradle.parallel=false
-
-# Hide: A compileOnly dependency is used in the Kotlin/Native target 'xxx'
 # Such dependencies are not applicable for Kotlin/Native, consider changing the dependency type to 'implementation' or 'api'.
+# To disable this warning, set the kotlin.native.ignoreIncorrectDependencies=true project property
 kotlin.native.ignoreIncorrectDependencies=true
+
+# 'expect'/'actual' classes (including interfaces, objects, annotations, enums, and 'actual' typealiases) are in Beta. You can use -Xexpect-actual-classes flag to suppress this warning. Also see: https://youtrack.jetbrains.com/issue/KT-61573
+# "-Xexpect-actual-classes"
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
+
+# https://kotlinlang.org/docs/native-improving-compilation-time.html#gradle-configuration
+#org.gradle.workers.max=8
+org.gradle.parallel=true
+org.gradle.caching=true
+
+
+# https://kotlinlang.org/docs/gradle-compilation-and-caches.html#the-new-kotlin-compiler
+#kotlin.experimental.tryK2=true
+
+
+#http.proxyHost=localhost
+#http.proxyPort=7790
