--- a/.github/workflows/publish-v4-release.yml
+++ b/.github/workflows/publish-v4-release.yml
@@ -80,7 +80,7 @@ jobs:
           token: ${{ secrets.PUSH_TOKEN }}
           body_path: .changelog/${{ github.ref_name }}.md
           generate_release_notes: true
-          prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') }}
+          prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') || contains(github.ref_name, 'dev') }}
 
   publish-snapshot:
     name: Publish snapshot
