:memo: 编写文档 还有一些注释等东西的修修改

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,7 +3,7 @@ blank_issues_enabled: true
 contact_links:
   - name: 问题反馈
     url: https://github.com/simple-robot/simpler-robot/issues/new/choose
-    about: 统一的问题反馈处
+    about: simbot统一的问题反馈处
 
   - name: 社区
     url: https://github.com/orgs/simple-robot/discussions
