更新文档和依赖版本，以及一些TODO

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -156,7 +156,7 @@ jobs:
         with:
           personal_token: ${{ secrets.PUSH_TOKEN }}
           external_repository: simple-robot-library/simbot3-api-docs
-          publish_branch: kdoc-deploy/component-qq-guild
+          publish_branch: kdoc-deploy/component-qq-guild-v3
           publish_dir: ./build/dokka/html
           # deploy to sub dir
-          destination_dir: components/qq-guild
+          destination_dir: components/qq-guild-v3
