--- a/.github/workflows/test-branch.yml
+++ b/.github/workflows/test-branch.yml
@@ -32,8 +32,8 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: 11
-          cache: 'gradle'
+          java-version: 21
+#          cache: 'gradle'
 
       - name: Run All Tests
         uses: gradle/gradle-build-action@v2
