ci: 合并 CI 配置，移除临时的 -v4 CI配置的有效性

--- a/.github/workflows/deploy-v4-website.yml
+++ b/.github/workflows/deploy-v4-website.yml
@@ -2,11 +2,11 @@ name: Deploy Website
 on:
   push:
     branches:
-#      - main
-#      - dev/ver/**
-#      - dev/main
-      - v4-dev/main
-      - v4-dev/v4-upgrade
+      - main
+      - dev/ver/**
+      - dev/main
+#      - v4-dev/main
+#      - v4-dev/v4-upgrade
 
     paths:
       - 'Writerside/**'
