借用 ksp 辅助文档的编写

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,10 @@ reactor = "3.6.2"
 simbot = "4.0.0-dev15"
 suspendTransform = "0.7.0-beta1"
 gradleCommon = "0.2.0"
+# ksp
+ksp = "1.9.22-1.0.17"
+# https://square.github.io/kotlinpoet/
+kotlinPoet = "1.16.0"
 
 [libraries]
 # simbot
@@ -92,6 +96,11 @@ log4j-slf4j2 = { group = "org.apache.logging.log4j", name = "log4j-slf4j2-impl",
 openjdk-jmh-core = { group = "org.openjdk.jmh", name = "jmh-core", version.ref = "openjdk-jmh" }
 openjdk-jmh-generator-annprocess = { group = "org.openjdk.jmh", name = "jmh-generator-annprocess", version.ref = "openjdk-jmh" }
 
+# ksp
+ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+# https://square.github.io/kotlinpoet/interop-ksp/
+kotlinPoet-ksp = { module = "com.squareup:kotlinpoet-ksp", version.ref = "kotlinPoet" }
+
 # reactor
 reactor-core = { group = "io.projectreactor", name = "reactor-core", version.ref = "reactor" }
 
@@ -105,6 +114,9 @@ suspend-transform-gradle = { module = "love.forte.plugin.suspend-transform:suspe
 gradle-common-core = { group = "love.forte.gradle.common", name = "gradle-common-core", version.ref = "gradleCommon" }
 gradle-common-multiplatform = { group = "love.forte.gradle.common", name = "gradle-common-kotlin-multiplatform", version.ref = "gradleCommon" }
 gradle-common-publication = { group = "love.forte.gradle.common", name = "gradle-common-publication", version.ref = "gradleCommon" }
+
+[plugins]
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
 [bundles]
 gradle-common = ["gradle-common-core", "gradle-common-multiplatform", "gradle-common-publication"]
