--- a/.github/workflows/deploy-v4-website.yml
+++ b/.github/workflows/deploy-v4-website.yml
@@ -20,18 +20,21 @@ permissions:
 
 env:
   # Name of module and id separated by a slash
-  INSTANCE: Writerside/d
+  INSTANCE: Writerside/qg
+  INSTANCE_NAME: qg
   # Replace HI with the ID of the instance in capital letters
-  ARTIFACT: webHelpD2-all.zip
+  ARTIFACT: webHelpQG2-all.zip
   # Writerside docker image version
   DOCKER_VERSION: 233.14272
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
-#  ALGOLIA_ARTIFACT: algolia-indexes-HI.zip
+  ALGOLIA_ARTIFACT: algolia-indexes-QG.zip
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      config_json: ${{ steps.output-config-json.outputs.config_json }}
 
     steps:
       - name: Checkout repository
@@ -54,12 +57,20 @@ jobs:
           retention-days: 7
 
       # Add the step below to upload Algolia indexes
-  #      - name: Upload algolia-indexes
-  #        uses: actions/upload-artifact@v3
-  #        with:
-  #          name: algolia-indexes
-  #          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
-  #          retention-days: 7
+      - name: Upload algolia-indexes
+        uses: actions/upload-artifact@v3
+        with:
+          name: algolia-indexes
+          path: artifacts/${{ env.ALGOLIA_ARTIFACT }}
+          retention-days: 7
+
+      - name: Unzip artifact
+        run: unzip -O UTF-8 -qq artifacts/${{ env.ARTIFACT }} -d dir
+
+      - name: Output documentation config.json
+        id: output-config-json
+        run: |
+          echo "config_json=$(cat dir/config.json)" >> $GITHUB_OUTPUT
 
   # Add the job below and artifacts/report.json on Upload documentation step above if you want to fail the build when documentation contains errors
   test:
@@ -107,3 +118,37 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v1
 
+  # https://www.jetbrains.com/help/writerside/configure-search.html
+  publish-indexes:
+    # Requires the build-job results
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    container:
+      image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
+
+    env:
+      ALGOLIA_APP_NAME: VLLZ4JZE8Z
+      ALGOLIA_INDEX_NAME: doc
+      ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
+      ALGOLIA_ARTIFACT: ${{ env.ALGOLIA_ARTIFACT }}
+      CONFIG_JSON_PRODUCT: ${{ env.INSTANCE_NAME }}
+      CONFIG_JSON_VERSION: ${{ fromJSON(needs.build.outputs.config_json).productVersion }}
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: algolia-indexes
+
+
+      - name: Unzip artifact
+        run: |
+          unzip -O UTF-8 -qq ${{ env.ALGOLIA_ARTIFACT }} -d algolia-indexes
+          env "algolia-key=${{env.ALGOLIA_KEY}}" java -jar /opt/builder/help-publication-agent.jar \
+          update-index \
+          --application-name ${{env.ALGOLIA_APP_NAME}} \
+          --index-name ${{env.ALGOLIA_INDEX_NAME}} \
+          --product ${{env.CONFIG_JSON_PRODUCT}} \
+          --version ${{env.CONFIG_JSON_VERSION}} \
+          --index-directory algolia-indexes/ \
+          2>&1 | tee algolia-update-index-log.txt
