--- a/.github/workflows/deploy-v4-website.yml
+++ b/.github/workflows/deploy-v4-website.yml
@@ -29,6 +29,9 @@ env:
   # Add the variable below to upload Algolia indexes
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: algolia-indexes-QG.zip
+  ALGOLIA_APP_NAME: VLLZ4JZE8Z
+  ALGOLIA_INDEX_NAME: doc
+  ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
 
 jobs:
   build:
@@ -127,11 +130,7 @@ jobs:
       image: registry.jetbrains.team/p/writerside/builder/algolia-publisher:2.0.32-2
 
     env:
-      ALGOLIA_APP_NAME: VLLZ4JZE8Z
-      ALGOLIA_INDEX_NAME: doc
-      ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
-      ALGOLIA_ARTIFACT: ${{ env.ALGOLIA_ARTIFACT }}
-      CONFIG_JSON_PRODUCT: ${{ env.INSTANCE_NAME }}
+
       CONFIG_JSON_VERSION: ${{ fromJSON(needs.build.outputs.config_json).productVersion }}
 
     steps:
@@ -148,7 +147,7 @@ jobs:
           update-index \
           --application-name ${{env.ALGOLIA_APP_NAME}} \
           --index-name ${{env.ALGOLIA_INDEX_NAME}} \
-          --product ${{env.CONFIG_JSON_PRODUCT}} \
+          --product ${{env.INSTANCE_NAME}} \
           --version ${{env.CONFIG_JSON_VERSION}} \
           --index-directory algolia-indexes/ \
           2>&1 | tee algolia-update-index-log.txt
