--- a/.github/workflows/deploy-v4-website.yml
+++ b/.github/workflows/deploy-v4-website.yml
@@ -31,7 +31,7 @@ env:
   # Replace HI with the ID of the instance in capital letters
   ALGOLIA_ARTIFACT: algolia-indexes-QG.zip
   ALGOLIA_APP_NAME: VLLZ4JZE8Z
-  ALGOLIA_INDEX_NAME: doc
+  ALGOLIA_INDEX_NAME: qg-doc
   ALGOLIA_KEY: ${{ secrets.ALGOLIA_KEY }}
 
 jobs:
